kubectl/application/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-gc-service
spec:
  selector:
    app: dotnet-gc-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
