kubectl/application/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-gc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: gc-test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotnet-gc-service
                port:
                  number: 80
